syntax = "proto3";

package go.micro.api.cartApi;

service CartApi {
	rpc FindAll(Request) returns (Response) {}
}

message Pair {
	string key = 1;
	repeated string values = 2;
}

message Request{
	string method =1;
	string path =2;
	map<string,Pair> header =3;
	map<string,Pair> get = 4;
	map<string,Pair> post =5;
	string body = 6;
	string url = 7;
}

message Response {
	int32 statusCode = 1;
	map<string,Pair> header = 2;
	string body = 3;
}